# modern-cpp-hw

./: CMakeLists.txt
binary-serialization/: CMakeLists.txt
binary-serialization/benchmark/: CMakeLists.txt
binary-serialization/benchmark/src/: benchmark.cpp  main.cpp  test_input.inc
binary-serialization/generate-data/: CMakeLists.txt
binary-serialization/generate-data/src/: generate_data.cpp
binary-serialization/message/: CMakeLists.txt
binary-serialization/message/include/: message.hpp
binary-serialization/message/src/: message.cpp
binary-serialization/src/: cbor_wrapper.cpp  cbor_wrapper.hpp  main.cpp  message.cpp  message.hpp  test_input.inc  types.hpp
binary-serialization/wrappers/: CMakeLists.txt
binary-serialization/wrappers/include/: bson_wrapper.hpp  cbor_wrapper.hpp
binary-serialization/wrappers/src/: bson_wrapper.cpp  cbor_wrapper.cpp
hw1-binary-serialization/: CMakeLists.txt
hw1-binary-serialization/benchmark/: CMakeLists.txt
hw1-binary-serialization/benchmark/src/: main.cpp
hw1-binary-serialization/generate-data/: CMakeLists.txt
hw1-binary-serialization/generate-data/src/: main.cpp
hw1-binary-serialization/message/: CMakeLists.txt
hw1-binary-serialization/message/include/: message.hpp  message.ipp  types.hpp
hw1-binary-serialization/message/src/: message.cpp
hw1-binary-serialization/tests/: CMakeLists.txt  test.data
hw1-binary-serialization/tests/src/: main.cpp  tests.cpp
hw1-binary-serialization/wrappers/: CMakeLists.txt
hw1-binary-serialization/wrappers/include/: bson_wrapper.hpp  bson_wrapper.inc  cbor_wrapper.hpp  cbor_wrapper.ipp
hw1-binary-serialization/wrappers/src/: bson_wrapper.cpp  cbor_wrapper.cpp
hw2-socks5-server/: CMakeLists.txt
hw2-socks5-server/include/: event_loop.hpp  server.hpp  socket.hpp  syscall.hpp  utils.hpp
hw2-socks5-server/server/: CMakeLists.txt
hw2-socks5-server/server/include/: event_loop.hpp  utils.hpp
hw2-socks5-server/server/src/: event_loop.cpp  main.cpp
hw2-socks5-server/src/: event_loop.cpp  main.cpp  server.cpp  socket.cpp  syscall.cpp  utils.cpp
hw2-socks5-server/wrappers/: CMakeLists.txt
hw2-socks5-server/wrappers/include/: io_uring.hpp  socket.hpp  syscall.hpp
hw2-socks5-server/wrappers/src/: io_uring.cpp  socket.cpp  syscall.cpp
